# Qodex

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  RELEASE_NOTES.md  package-lock.json  package.json  qodex.example.toml  tsconfig.base.json
.github/: PULL_REQUEST_TEMPLATE.md
contracts/: config-contract.json  core-rpc.json  dto-contract.json
crates/qodex-core/: Cargo.toml
crates/qodex-core/src/: api.rs  backend.rs  codex.rs  config.rs  contract.rs  db.rs  lib.rs  main.rs  opencode.rs  protocol.rs  service.rs
crates/qodex-core/src/service/: approvals.rs  backend_events.rs  deliveries.rs  event_projector.rs  events.rs  helpers.rs  housekeeping.rs  inbound_files.rs  lifecycle.rs  memory.rs  runtime.rs  test_support.rs  tests.rs
docs/: ai-collaboration.md  ai-prompts.md  current-architecture.md  execution-practices.md  implementation-plan.md
docs/releases/: v0.1.2.md  v0.1.3.md
docs/superpowers/plans/: 2026-03-24-wechat-openclaw-compat.md  2026-03-25-codex-workspace-file-ingress.md  2026-04-05-autocontinue.md  2026-04-05-status-approveall.md
docs/superpowers/specs/: 2026-03-24-wechat-openclaw-compat-design.md  2026-03-25-codex-workspace-file-ingress-design.md  2026-04-05-autocontinue-design.md
docs/tasks/: README.md
docs/tasks/_template/: findings.md  plan.md  progress.md
docs/tasks/memory-mvp/: findings.md  plan.md  progress.md
scripts/: generate-contract-artifacts.mjs  qodex-doctor.mjs  qodex-host-bg.mjs  qodex-quick-start.mjs  qodex-quick-start.test.mjs  qodex-restart.mjs  qodex-restart.test.mjs  qodex-runtime-utils.mjs  qodex-status.mjs
(+6 files in other folders)
