[package]
name = "qodex-core"
version = "0.1.0"
edition = "2021"
description = "Qodex core bridge for Codex app-server"
license = "MIT"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["ws", "macros"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.43", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5"
uuid = { version = "1.11", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3.14"
